--- a/style.css
+++ b/style.css
@@ -37,22 +37,30 @@ TABLE OF CONTENT
   |
   ------------------------------------------------------------*/
 
-  --ui-color-brand: #353535;
+  --ui-color-brand: #100071;
 
   /* COLOR PALETTE */
 
   --ui-color-n-000: #fff;
-  --ui-color-n-050: #f5f5f5;
-  --ui-color-n-100: #ebebeb;
-  --ui-color-n-300: #aeaeae;
-  --ui-color-n-500: #353535;
-  --ui-color-n-700: #282828;
-  --ui-color-n-900: #1a1a1a;
+  --ui-color-n-050: #ebebff;
+  --ui-color-n-100: #dbdbe4;
+  --ui-color-n-300: #120077;
+  --ui-color-n-500: #0c0051;
+  --ui-color-n-700: #07002d;
+  --ui-color-n-900: #030014 ;
 
   /* BACKGROUND COLOR */
   
   --ui-color-background-primary  : var(--ui-color-n-000);
   --ui-color-background-secondary: var(--ui-color-n-050);
+
+  /* BORDER COLOR */
+
+  --ui-color-border: var(--ui-color-n-100);
+  
+  /* FORM COLOR */
+
+  --ui-color-form-input: var(--ui-color-n-100);
 
   /* TYPOGRAPHY COLOR */
 
@@ -67,7 +75,7 @@ TABLE OF CONTENT
   |
   ------------------------------------------------------------*/
 
-  --ui-typography-typeface: "Inter", sans-serif;
+  --ui-typography-typeface: "Labrada", serif;
 
   /* FONT SIZE */
 
@@ -101,13 +109,14 @@ TABLE OF CONTENT
 
   /* GAP */
 
-  --ui-gap-cta : .5rem;
-  --ui-gap-card: 1.25rem;
+  --ui-gap-cta    : .75rem;
+  --ui-gap-content: 1.25rem;
 
   /* BORDER RADIUS */
   
   --ui-radius-button: 5rem;
-  --ui-radius-card  : 1rem;
+  --ui-radius-input : 5rem;
+  --ui-radius-card  : .5rem;
 
 }
 
@@ -178,6 +187,10 @@ strong { font-weight: 700; }
 
 small { font-size: var(--ui-typography-s); }
 
+.footer-small {
+  text-decoration: line-through;
+}
+
 .ui-text-note {
   color: var(--ui-color-typography-note);
   line-height: 1;
@@ -194,6 +207,12 @@ svg {
   margin: 0 auto;
   max-width: 100%;
 }
+
+.logo,
+.maison-dot-work {
+  width: 48px;
+}
+
 
 /*--------------------------------------------------------------
 5.0 LAYOUT
@@ -225,15 +244,67 @@ svg {
 --------------------------------------------------------------*/
 
 .ui-component-cta {
-  column-gap: var(--ui-gap-cta);
-  flex-direction: row;
+  flex-direction: column;
+  row-gap: var(--ui-gap-cta);
 }
 
 /*--------------------------------------------------------------
 |
-| 6.2 BUTTON
+| 6.2 FORM
 |
 --------------------------------------------------------------*/
+
+input,
+button {
+  color: inherit;
+  font-family: inherit;
+  font-size: var(--ui-typography-p);
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  text-rendering: inherit;
+  text-transform: none;
+}
+
+/* FORM */
+
+form { width: 100%; }
+
+.ui-component-form {
+  background-color: var(--ui-color-form-input);
+  border-radius: var(--ui-radius-input);
+  grid-template-columns: minmax(0, 1fr) auto;
+  padding: .25rem;
+}
+
+/* INPUT */
+
+::placeholder { color: var(--ui-color-typography-note); }
+
+.ui-component-input {
+  background-color: var(--ui-color-form-input);
+  border: .0625rem solid var(--ui-color-form-input);
+  border-radius: var(--ui-radius-input);
+}
+
+.ui-component-input-medium {
+  height: 2.5rem;
+  padding: .625rem 1rem .75rem;
+}
+
+/*--------------------------------------------------------------
+|
+| 6.3 BUTTON
+|
+--------------------------------------------------------------*/
+
+button {
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  display: block;
+  padding: 0;
+}
 
 .ui-component-button {
   border: .0625rem solid var(--ui-color-brand);
@@ -249,34 +320,37 @@ svg {
   color: var(--ui-color-typography-button);
 }
 
-.ui-component-button-normal { padding: .75rem 1rem .875rem; }
-
-.ui-component-button-icon {
-  align-items: center;
-  column-gap: .5rem;
-  display: flex;
+.ui-component-button-medium {
+  padding: .625rem .875rem .75rem;
+  width: fit-content;
 }
 
 /*--------------------------------------------------------------
 |
-| 6.3 CARD
+| 6.4 CARD
 |
 --------------------------------------------------------------*/
 
 .ui-component-card {
-  background-color: var(--ui-color-background-secondary);
+  border: 1px solid var(--ui-color-brand);
   border-radius: var(--ui-radius-card);
   overflow: hidden;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding: 2.25rem 1.5rem;
   text-align: center;
   width: 100%;
 }
 
-.ui-component-card--info {
-  padding-bottom: 2.25rem;
-  padding-top: 2.25rem;
+.ui-component-card:hover {
+  box-shadow: 5px 5px 10px 0px rgba(16,0,113,0.2);;
 }
+
+.ui-component-card img {
+  border-radius: var(--ui-radius-card);
+}
+
+.ui-component-card--image { margin-bottom: 2.25rem; }
+
+.ui-component-card--title { margin-bottom: .5rem; }
 
 /*--------------------------------------------------------------
 7.0 SECTION
