--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body {
   font-feature-settings: "liga", "kern";
   font-size: var(--ui-typography-p);
   font-weight: 400;
+  font-style: italic;
   line-height: var(--ui-typography-p-leading);
   margin: 0 auto;
   text-rendering: optimizeLegibility;
@@ -162,6 +163,7 @@ h2,
 h3 {
   color: var(--ui-color-typography-heading);
   margin-bottom: var(--ui-typography-margin-heading);
+  font-style: normal;
 }
 
 h1 {
@@ -295,6 +297,19 @@ form { width: 100%; }
   height: 2.5rem;
   padding: .625rem 1rem .75rem;
 }
+
+.hidden {
+  display: none;
+}
+
+#success-message {
+  background-color: var(--ui-color-n-50);
+  border: .0625rem solid var(--ui-color-form-input);
+  border-radius: var(--ui-radius-input);
+  padding: .25rem .875rem .20rem;
+  color: var(--ui-color-n-300);
+}
+
 
 /*--------------------------------------------------------------
 |
