--- a/style.css
+++ b/style.css
@@ -153,6 +153,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 h1,
 h2,
 h3,
@@ -351,16 +355,16 @@ button {
 --------------------------------------------------------------*/
 
 .ui-component-card {
-  border: 1px solid var(--ui-color-brand);
   border-radius: var(--ui-radius-card);
   overflow: hidden;
-  padding: 2.25rem 1.5rem;
+  padding: 2.25rem .5rem;
   text-align: center;
   width: 100%;
 }
 
 .ui-component-card:hover {
-  box-shadow: 5px 5px 10px 0px rgba(16,0,113,0.2);;
+  /*box-shadow: 5px 5px 10px 0px rgba(16,0,113,0.2);*/
+  background-color: var(--ui-color-n-050);
 }
 
 .ui-component-card img {
@@ -370,6 +374,15 @@ button {
 .ui-component-card--image { margin-bottom: 2.25rem; }
 
 .ui-component-card--title { margin-bottom: .5rem; }
+
+.top {
+  margin-top: .5rem;
+}
+
+.bottom {
+  margin-bottom: .5rem;
+}
+
 
 /*--------------------------------------------------------------
 7.0 SECTION
@@ -537,6 +550,8 @@ button {
     padding-left: 2.25rem;
     padding-right: 2.25rem;
   }
+
+  
 
   /*------------------------------------------------------------
   SECTION
